# OwlGuard

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: scan_benchmark.rs
npm/: build.js  index.js  install.js  package.json
rules/: blacklist_apps.json  blacklist_urls.json  fraud_rules.json  sensitive_patterns.json
scripts/: release.ps1  release.sh
src/: lib.rs  main.rs
src/detectors/: mod.rs  orchestrator.rs  risk_scorer.rs  sensitive.rs  threat_intel.rs
src/detectors/state_machine/: brushing.rs  fake_customer.rs  fake_leader.rs  fake_police.rs  fake_shopping.rs  flight_change.rs  game_trade.rs  investment.rs  loan_credit.rs  mod.rs  romance.rs
src/matchers/: keyword.rs  mod.rs  regex_matcher.rs
src/mcp/: server.rs  tools.rs
src/rules/: loader.rs
src/utils/: idcard.rs  luhn.rs  mod.rs  text_clean.rs
tests/: integration_test.rs
