[package]
name = "owlguard-mcp"
version = "0.1.0"
edition = "2021"
description = "枭卫（OwlGuard）MCP — 开源反诈智能体MCP服务"
license = "Apache-2.0"

[dependencies]
rmcp = { version = "0.4", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aho-corasick = "1"
regex = "1"
unicode-segmentation = "1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_benchmark"
harness = false
